--- a/works.html
+++ b/works.html
@@ -11,9 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Blog</a></li>
-                <li class="atual"><a href="#">Works</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="atual"><a href="works.html">Works</a></li>
             </ul>
         </nav>
     </header>
